--- a/oobium_common/pubspec.yaml
+++ b/oobium_common/pubspec.yaml
@@ -10,7 +10,8 @@ dependencies:
   meta: ^1.2.3
   mime: ^0.9.7
   http: ^0.12.2
-  corsac_jwt: ^0.2.2
+  corsac_jwt: ^0.3.0
+  objectid: ^1.1.1
 
 dev_dependencies:
   pedantic: ^1.9.0
