--- a/oobium_server/pubspec.yaml
+++ b/oobium_server/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   mime: ^0.9.7
   http: ^0.12.2
   corsac_jwt: ^0.3.0
+  objectid: ^1.1.1
 
 dev_dependencies:
   oobium_common_test:
