--- a/oobium/pubspec.yaml
+++ b/oobium/pubspec.yaml
@@ -1,5 +1,5 @@
 name: oobium
-description: Core Oobium framework for Clients and Servers.
+description: Framework for Clients and Servers.
 # version: 1.0.0
 # homepage: https://www.example.com
 
@@ -14,7 +14,7 @@ dependencies:
 
 dev_dependencies:
   oobium_test:
-    path: ../../oobium/oobium_test
+    path: ../oobium_test
   pedantic: ^1.9.0
   test: ^1.15.3
   mockito: ^4.1.3
