--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "**/.idea/": true,
         "**/.vscode/": true
     },
-    "files.eol": "\n"
+    "files.eol": "\n",
+    "editor.tabSize": 2
 }
