--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "**/.vscode/": true
     },
     "files.eol": "\n",
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "diffEditor.wordWrap": "off",
+    "editor.wordWrapColumn": 120,
+    "debug.console.wordWrap": false
 }
