--- a/oobium_routing/example/pubspec.yaml
+++ b/oobium_routing/example/pubspec.yaml
@@ -1,15 +1,20 @@
-name: example
-description: Example Oobium Router project.
+name: oobium_routing_example
+description: Demonstrates how to use the oobium_routing plugin.
+version: 1.0.0
 publish_to: 'none'
-version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   oobium_routing:
+    # When depending on this package from a real application you should use:
+    #   oobium_routing: ^x.y.z
+    # See https://dart.dev/tools/pub/dependencies#version-constraints
+    # The example app is bundled with the plugin so we use a path dependency on
+    # the parent directory to use the current plugin's version.
     path: ../
 
   cupertino_icons: ^1.0.2
