--- a/oobium_routing/pubspec.yaml
+++ b/oobium_routing/pubspec.yaml
@@ -1,6 +1,7 @@
 name: oobium_routing
-description: Simplified routing for Navigator 2.0
-version: 0.1.0
+description: Simplified routing for Navigator 2.0.
+  Type-safe, semi-declarative, supporting bidirectional browser address bar and nested routers.
+version: 0.1.1
 repository: https://github.com/jeremy-dowdall/oobium
 
 environment:
@@ -9,7 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
