--- a/oobium_routing/pubspec.yaml
+++ b/oobium_routing/pubspec.yaml
@@ -1,7 +1,7 @@
 name: oobium_routing
 description: Simplified routing for Navigator 2.0.
   Type-safe, semi-declarative, supporting bidirectional browser address bar and nested routers.
-version: 0.1.2
+version: 0.2.0+1
 repository: https://github.com/jeremy-dowdall/oobium
 
 environment:
@@ -14,7 +14,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^4.1.2
+  mockito: ^5.0.8
+  build_runner: ^2.0.3
 
 flutter:
   uses-material-design: true
