--- a/oobium_routing/example/pubspec.yaml
+++ b/oobium_routing/example/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.4
+  oobium_routing_gen:
+    path: ../gen
 
 flutter:
   uses-material-design: true
