--- a/firebase_auth_validator/pubspec.yaml
+++ b/firebase_auth_validator/pubspec.yaml
@@ -4,16 +4,16 @@ description: An AuthValidator for Firebase Users.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   oobium_server:
     path: ../oobium_server
-  corsac_jwt: ^0.4.0
-  meta: ^1.3.0
-  http: ^0.13.1
+  corsac_jwt: ^1.0.0-nullsafety.1
+  http: ^0.13.3
 
 dev_dependencies:
+  build_runner: ^2.0.4
   pedantic: ^1.9.0
-  test: ^1.15.3
-  mockito: ^4.1.3
+  test: ^1.17.5
+  mockito: ^5.0.9
