--- a/oobium/pubspec.yaml
+++ b/oobium/pubspec.yaml
@@ -4,12 +4,13 @@ description: Framework for Clients and Servers.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  collection: ^1.15.0
   meta: ^1.3.0
-  http: ^0.13.1
-  objectid: ^1.1.1
+  http: ^0.13.3
+  objectid: ^2.0.0
   http_parser: ^4.0.0
 
 dev_dependencies:
