--- a/oobium_server/pubspec.yaml
+++ b/oobium_server/pubspec.yaml
@@ -4,14 +4,15 @@ description: A starting point for Dart libraries or applications.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   oobium:
     path: ../oobium
   meta: ^1.3.0
-  http: ^0.13.1
-  objectid: ^1.1.1
+  collection: 1.15.0
+  http: ^0.13.3
+  objectid: ^2.0.0
 
 dev_dependencies:
   pedantic: ^1.11.0
