--- a/oobium_server/pubspec.yaml
+++ b/oobium_server/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   objectid: ^2.0.0
 
 dev_dependencies:
+  build_runner: 2.0.4
   pedantic: ^1.11.0
   test: ^1.16.8
-  mockito: ^5.0.2
+  mockito: ^5.0.9
   stream_channel: ^2.1.0
