--- a/oobium/pubspec.yaml
+++ b/oobium/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^0.13.3
   objectid: ^2.0.0
   http_parser: ^4.0.0
+  xstring: ^1.0.2
 
 dev_dependencies:
   pedantic: ^1.9.0
