--- a/oobium_server/pubspec.yaml
+++ b/oobium_server/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   collection: 1.15.0
   http: ^0.13.3
   objectid: ^2.0.0
+  xstring: ^1.0.2
 
 dev_dependencies:
   build_runner: 2.0.4
