--- a/datastore/example/pubspec.yaml
+++ b/datastore/example/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   oobium_datastore:
     # When depending on this package from a real application you should use:
-    #   oobium: ^x.y.z
+    #   oobium_datastore: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
