--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     path: ../oobium
   oobium_datastore:
     path: ../datastore
+  oobium_websocket:
+    path: ../websocket
   meta: ^1.3.0
   collection: 1.15.0
   http: ^0.13.3
