--- a/datastore/example/pubspec.yaml
+++ b/datastore/example/pubspec.yaml
@@ -25,7 +25,7 @@ dev_dependencies:
   build_runner: ^2.0.4
   oobium_datastore_gen:
     # When depending on this package from a real application you should use:
-    #   oobium_gen: ^x.y.z
+    #   oobium_datastore_gen: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
