--- a/firebase_auth_validator/pubspec.yaml
+++ b/firebase_auth_validator/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  oobium_connect:
+    path: ../connect
   oobium_server:
     path: ../server
   corsac_jwt: ^1.0.0-nullsafety.1
