--- a/connect/pubspec.yaml
+++ b/connect/pubspec.yaml
@@ -24,7 +24,14 @@ dependencies:
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
     path: ../server
-  xstring: ^1.1.1
+  oobium_websocket:
+    # When depending on this package from a real application you should use:
+    #   oobium_websocket: ^x.y.z
+    # See https://dart.dev/tools/pub/dependencies#version-constraints
+    # The example app is bundled with the plugin so we use a path dependency on
+    # the parent directory to use the current plugin's version.
+    path: ../websocket
+  xstring: ^1.2.0
 
 dev_dependencies:
   build_runner: ^2.0.4
