--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   collection: 1.15.0
   http: ^0.13.3
   objectid: ^2.0.0
-  xstring: ^1.0.2
+  vm_service: ^7.1.0
+  watcher: ^1.0.0
+  xstring: ^1.2.0
 
 dev_dependencies:
   build_runner: 2.0.4
