--- a/tools/cli/pubspec.yaml
+++ b/tools/cli/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     path: ../../server
   oobium_websocket:
     path: ../../websocket
+  pubspec_parse: ^1.0.0
   tools_common:
     path: ../common
   yaml: ^3.1.0
