--- a/tools/common/pubspec.yaml
+++ b/tools/common/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  pubspec_parse: ^1.0.0
+  yaml: ^3.1.0
   xstring: ^1.2.0
 
 dev_dependencies:
