--- a/tools/cli/example/pubspec.yaml
+++ b/tools/cli/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: tools_bootstrap
-description: Bootstrap server for Oobium based projects
+name: cli_example
+description: example project
 version: 0.1.0
 repository: https://github.com/jeremy-dowdall/oobium
 publish_to: 'none'
@@ -8,5 +8,5 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  pubspec_parse: ^1.0.0
-  tar: ^0.4.0
+  oobium_server:
+    path: ../../../server
