--- a/tools/host/pubspec.yaml
+++ b/tools/host/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   oobium_websocket:
     path: ../../websocket
   pubspec_parse: ^1.0.0
+  tar: ^0.4.0
   tools_common:
     path: ../common
   yaml: ^3.1.0
