--- a/routing/example/pubspec.yaml
+++ b/routing/example/pubspec.yaml
@@ -23,8 +23,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.4
-  oobium_routing_gen:
-    path: ../gen
+  oobium_routing_gen: 1.0.0-dev.1
 
 flutter:
   uses-material-design: true
