--- a/routing_gen/pubspec.yaml
+++ b/routing_gen/pubspec.yaml
@@ -1,9 +1,7 @@
 name: oobium_routing_gen
-description: Generators for Oobium Routing
-version: 0.2.0+1
+description: Generators for Oobium Routing, enabling compile-time safe routes
+version: 1.0.0-dev.1
 repository: https://github.com/jeremy-dowdall/oobium
-
-publish_to: 'none'
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -11,10 +9,7 @@ environment:
 dependencies:
   build: ^2.0.2
   dart_style: ^2.0.1
-#  oobium:
-#    path: ../oobium
+  collection: ^1.15.0
 
 dev_dependencies:
   build_runner: ^2.0.4
-#  test: ^1.15.3
-#  mockito: ^4.1.2
