--- a/datastore/example/pubspec.yaml
+++ b/datastore/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: example
-description: Oobium Demo.
+description: Oobium Datastore Demo.
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -23,13 +23,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.0.4
-  oobium_datastore_gen:
-    # When depending on this package from a real application you should use:
-    #   oobium_datastore_gen: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    path: ../gen
+  oobium_datastore_gen: ^1.0.0-dev.1
 
 flutter:
   uses-material-design: true
