--- a/datastore/pubspec.yaml
+++ b/datastore/pubspec.yaml
@@ -1,7 +1,7 @@
 name: oobium_datastore
-description: A simple command-line application.
-version: 1.0.0
-# homepage: https://www.example.com
+description: Persistent DataStore for Dart applications.
+version: 1.0.0-dev.1
+repository: https://github.com/jeremy-dowdall/oobium
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -9,7 +9,7 @@ environment:
 dependencies:
   objectid: ^2.0.0
   stream_channel: ^2.1.0
-  xstring: ^1.1.1
+  xstring: ^1.2.0
 
 dev_dependencies:
   pedantic: ^1.10.0
